<resources>
    <string name="app_name">My Contact List</string>
    <string name="button_to_display_a_list_of_settings">Button to display a list of Settings</string>
    <string name="button_to_display_a_list_of_contactsbutton_to_display_a_list_of_contacts_on_a_map">Button to display a list of contactsButton to display a list of contacts on a map</string>
    <string name="button_to_display_a_list_of_contacts">Button to display a list of contacts</string>
    <string name="save">Save</string>
    <string name="enter_name">Enter Name</string>
    <string name="contact">Contact:</string>
    <string name="address">Address:</string>
    <string name="enter_street_address">Enter Street Address:</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip_code">Zip Code</string>
    <string name="home_phone">Home Phone:</string>
    <string name="cell_phone">Cell Phone:</string>
    <string name="email_address">Email Address:</string>
    <string name="birthday">Birthday:</string>
    <string name="_01_01_1970">01/01/1970</string>
    <string name="change">Change</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
</resources>